--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ email: adam.brown.x.ridley@gmail.com
 description: This is a description.
 github_username:  RidleyB
 remote_theme: "mmistakes/minimal-mistakes@4.25.1"
+minimal_mistakes_skin: "dark"
 domain: ridleyb.github.io
 url: https://ridleyb.github.io
 
