--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Shadows of Intrigue
+logo: "/assets/images/sen-logo-256.png"
 email: adam.brown.x.ridley@gmail.com
 description: This is a description.
 github_username:  RidleyB
