--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 main:
    - title: "Lore"
-   url: /docs/_lore/
+   - url: /docs/_lore/
    - title: "Player Content"
-   url: /docs/_content/
+   - url: /docs/_content/
