--- a/_config.yml
+++ b/_config.yml
@@ -4,33 +4,39 @@
 # which you are expected to set up once and rarely edit after that. If you find
 # yourself editing this file very often, consider using Jekyll's data files
 # feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 
+remote_theme: "mmistakes/minimal-mistakes@4.25.1"
+minimal_mistakes_skin: "dark"
+
+locale: "en-US"
 title: Shadows of Intrigue
+title_separator: "|"
+name: &gmname "Adam Brown"
 logo: "/assets/images/sen-logo-256.png"
 email: adam.brown.x.ridley@gmail.com
 description: This is a description.
 github_username:  RidleyB
-# theme: minimal-mistakes-jekyll
-minimal_mistakes_skin: "dark"
-remote_theme: "mmistakes/minimal-mistakes@4.25.1"
+
+
 domain: ridleyb.github.io
 url: https://ridleyb.github.io
+baseurl: "/shadows-of-intrigue"
+
+search: true
 
 plugins:
-   - jekyll-include-cache
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
+
+author:
+  name             : *gmname # *gmname is a YAML reference pointing to the &anchor earlier
+  avatar           : "/assets/images/author.png"
+  bio              : "Just a guy."
+  location         : "The Celestial City"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -63,4 +69,3 @@ defaults:
       comments: true
       share: true
       related: true
-      title_separator: "|"
