--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@
 # yourself editing this file very often, consider using Jekyll's data files
 # feature for the data you need to update frequently.
 
-remote_theme: "mmistakes/minimal-mistakes@4.25.1"
+remote_theme: "mmistakes/minimal-mistakes@master"
+theme_version: "4.25.1"
 minimal_mistakes_skin: "dark"
 
 locale: "en-US"
@@ -20,7 +21,6 @@ github_username:  RidleyB
 
 domain: ridleyb.github.io
 url: https://ridleyb.github.io
-baseurl: "/shadows-of-intrigue"
 
 search: true
 
