--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title_separator: "|"
 name: &gmname "Adam Brown"
 logo: "/assets/images/sen-logo-256.png"
 email: adam.brown.x.ridley@gmail.com
-description: This is a description.
+description: A planned 5e story taking place in the Celestial city of Sen.
 github_username:  RidleyB
 
 
