--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       comments: true
-      share: true
+      share: false
       related: true
