--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ logo: "/assets/images/sen-logo-256.png"
 email: adam.brown.x.ridley@gmail.com
 description: A planned 5e story taking place in the Celestial city of Sen.
 github_username:  RidleyB
+mermaid: true
 
 
 domain: ridleyb.github.io
