--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ github_username:  RidleyB
 mermaid: true
 
 
-domain: ridleyb.github.io
-url: https://ridleyb.github.io
+domain: ridleyb.github.io/the-celestial-city
+url: https://ridleyb.github.io/the-celestial-city
 
 #search: true
 
