--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 remote_theme: "mmistakes/minimal-mistakes@master"
 theme_version: "4.25.1"
 minimal_mistakes_skin: "dark"
-theme: minimal-mistakes-jekyll
+# theme: minimal-mistakes-jekyll
 
 locale: "en-US"
 title: Shadows of Intrigue
