--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@
 minimal_mistakes_skin: "dark"
 
 locale: "en-US"
+url: https://ridleyb.github.io/sen/
 title: Shadows of Intrigue
 title_separator: "|"
 name: &gmname "Adam Brown"
