--- a/_config.yml
+++ b/_config.yml
@@ -66,23 +66,23 @@ collections_dir: content
 collections:
    factions:
       output: true
-      permalink: /sen/:collection/:title
+      permalink: :collection/:title
 
    lore:
       output: true
-      permalink: /sen/:collection/:title
+      permalink: :collection/:title
 
    characters:
       output: true
-      permalink: /sen/:collection/:title
+      permalink: :collection/:title
 
    content:   
       output: true
-      permalink: /sen/:collection/:title
+      permalink: :collection/:title
 
    other:   
       output: true
-      permalink: /sen/:collection/:title
+      permalink: :collection/:title
 
 include:
 - .htaccess
