--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,12 +19,16 @@ sidebar:
       - title: An Invitation
         url: /content/an-invitation
   - title: City
+    url: /factions/
     children:
       - title: Collegium Arcanum
         url: /factions/collegium-arcanum
       - title: Guild of Open Commerce
         url: /factions/guild-of-open-commerce
+      - title: Guild of Discovery
+        url: /factions/guild-of-discovery
   - title: Families
+    url: /factions/
     children:
       - title: Blanchard Family
         url: /factions/blanchard-family
@@ -37,6 +41,7 @@ sidebar:
       - title: Santini Family
         url: /factions/santini-family
   - title: Religion
+    url: /factions/
     children:
       - title: Church of the Union
         url: /factions/church-of-the-union
@@ -47,12 +52,16 @@ sidebar:
   - title: Lore
     url: /lore/
     children:
-      - title: World History
+      - title: History
         url: /lore/world-history
       - title: Races
         url: /lore/races
       - title: Deities
         url: /lore/deities
+      - title: Worlds
+        url: /lore/worlds
+      - title: Calendar
+        url: /lore/calendar
   - title: TODO
     url: /todo/
     children:
