--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ exclude:
 
 # custom global variables
 
-all_factions: "blanchard, del-vecchio, montaigne, reinhardt, santini, collegium, commerce, church, open-hand, sacred-eye, discovery, other"
+all_factions: "blanchard, del-vecchio, montaigne, reinhardt, santini, collegium, commerce, church, open-hand, sacred-eye, discovery, jcs, tvl, other"
 path_logo: /assets/images/logos/
 
 defaults:
@@ -192,6 +192,10 @@ defaults:
         before_nav: true
         excerpt: true
         title: true
+      header:
+        overlay_image: /assets/images/sen-splash-1.jpg
+        overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
+        caption: ""
       category: lore
       toc: true
       toc_sticky: true
