Fixed issue with world history

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ sidebar:
       - title: Deities
         url: /lore/deities
       - title: History
-        url: /lore/world-history
+        url: /lore/history
       - title: Races
         url: /lore/races
       - title: Worlds
