Added third incident report for the heist. Updated links on tvl page.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,6 +29,8 @@ sidebar:
         url: /lore/history
       - title: Races
         url: /lore/races
+      - title: The Celestial City
+        url: /lore/the-celestial-city
       - title: Worlds
         url: /lore/worlds
   - title: "Factions: City"
