--- a/content/_config.yml
+++ b/content/_config.yml
@@ -10,7 +10,7 @@ minimal_mistakes_skin: "dark"
 locale: "en-US"
 url: "https://ridleyb.github.io"
 baseurl: "/sen"
-title: Shadows of Intrigue
+title: "Shadows of Intrigue"
 title_separator: "|"
 name: &gmname "Adam Brown"
 logo: "/assets/images/logos/sen.png"
