added a search for easier edits, added sen sentinel articles, added daily ledger articles, updated negotiations ruleset with a more tag, added recent news, changed name of sennite deity, updated inner rings, deities, hadozee, yuanti.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,6 +18,8 @@ sidebar:
         url: /content/rules-and-restrictions
       - title: 5e Content
         url: /5e-content/
+      - title: Recent News
+        url: /content/recent-news
   - title: "Lore: General"
     url: /lore/
     children:
